add fd docs
