# docs/swagger.json
@@ -1413,6 +1413,43 @@
                 }
             }
         },
+        "/ai_arts/api/edge_inferences/push/:id": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "update dataset",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "job id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APISuccessResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    }
+                }
+            }
+        },
         "/ai_arts/api/files/download/dataset/:id": {
             "get": {
                 "produces": [
